# SOAP-and-REST

./: CMakeLists.txt  database.cpp  database.h  database_entity.h  http_server.cpp  http_server.h  main.cpp  order.cpp  order.h  pizza.cpp  pizza.h  user.cpp  user.h  xml_parser.cpp  xml_parser.h
assets/: fullchain.pem  privkey.pem
